<resources>
    <string name="app_name">Let\'s Split!</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="great_18">Great (18%)</string>
    <string name="good_15">Good (15%)</string>
    <string name="ok_10">Ok (10%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="tip_by_person">Tip divided by person: %s</string>
    <string name="total_amount">Total by person: %s</string>
    <string name="person_cost">Cost divided by person: %s</string>
    <string name="split_by">Split by</string>
</resources>